2.0.12.dev0
 * Add documentation on repositories, including SSH, Rclone, S3, and B2:
   https://torsion.org/borgmatic/reference/configuration/repositories/
 * Improve documentation search results for individual configuration options.

2.0.11
 * #957: Document borgmatic's limitations around parallelism—both its own and Borg's. See the
   documentation for more information:
   https://torsion.org/borgmatic/how-to/make-per-application-backups/#limitations
 * #1165: Fix for when the systemd service directories (RuntimeDirectory and StateDirectory) each
   contain multiple paths.
 * #1168: Fix for the "list", "info", and "delete" options in "extra_borg_options" being ignored
   when "--archive" is omitted with Borg 1.x.
 * #1169: Fix for a regression in the ZFS, LVM, and Btrfs hooks in which partial excludes of
   snapshot paths were ignored.
 * #1170: Fix for an inconsistent log level for Borg's last output line before exiting.
 * #1172: Add an "environment" option to the Sentry monitoring hook.
 * #1176: Fix the "--repository" flag not applying to command hooks.
 * Add a "rename" option to "extra_borg_options" to support passing arbitrary flags to "borg
   rename".
 * Add documentation on patterns and excludes:
   https://torsion.org/borgmatic/reference/configuration/patterns-and-excludes/
 * Drop support for Python 3.9, which has been end-of-lifed.

2.0.10
 * #427: Expand the "extra_borg_options" option to support passing arbitrary Borg flags to every
   Borg sub-command that borgmatic uses. As part of this, deprecate the "init" option under
   "borg_extra_options" in favor of "repo_create".
 * #942: Factor reference material out of the documentation how-to guides. This means there's now a
   whole reference section in the docs! Check it out: https://torsion.org/borgmatic/
 * #973: For the MariaDB and MySQL database hooks, add a "skip_names" option to ignore particular
   databases when dumping "all".